# APT-API

./: .gitignore  README.md  create_token.py  pyproject.toml  run.py
app/: __init__.py
app/Routes/api/: decode_api.py  encode_api.py
app/models/: salt.py  validator.py
app/repository/: base_mongo.py  token_handling.py
app/services/: decoding.py  encoding.py  token_handling.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  gunicorn_config.py
