[project]
name = "apt-api"
version = "0.1.0"
description = "APT APi"
authors = [
    {name = "snagov89"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "app" }
]
dependencies = [
    "pydub (>=0.25.1,<0.26.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-limiter (>=3.10.1,<4.0.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
